# img2ascii

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
src/convertor/: mod.rs
src/options/: mod.rs
