[package]
name = "img2ascii"
authors = ["Ethan Zhang <ezsland05@gmail.com>"]
description = "A simple CLI tool to convert images to ascii text"
homepage = "https://github.com/edzdez/img2ascii"
repository = "https://github.com/edzdez/img2ascii"
keywords = ["cli", "graphics"]
categories = ["command-line-utilities", "graphics"]
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "MIT"

[[bin]]
name = "img2ascii"

[dependencies]
structopt = "0.3.25"
image = "0.23.14"
anyhow = "1.0.51"
